--- a/src/templates/pages/author.html
+++ b/src/templates/pages/author.html
@@ -47,35 +47,60 @@
 
             <h2 class="author__title title">Произведения</h2>
 
-            <div class="acor-container">
-              <input type="radio" name="acor" id="acor1" checked="checked" />
-              <label for="acor1">
-                <h3 class="author__subtitle">Зарницы памяти. Записки курсанта летного училища.</h3>
-              </label>
-              <div class="acor-body">
-                <ol class="author__content" reversed data-aos="fade-up" data-aos-duration="1200">
-                  <li class="author__item">
-                    <a href="#" class="author__link"> Лётное сладострастие </a>
-                  </li>
+            <ol class="author__сontent">
+              <h3 class="author__title">Книги</h3>
 
-                  <li class="author__item">
-                    <a href="#" class="author__link"> Лётное сладострастие </a>
-                  </li>
-                </ol>
-              </div>
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
 
-              <input type="radio" name="acor" id="acor2" />
-              <label for="acor2">Заголовок вкладки</label>
-              <div class="acor-body">
-                <p>Описание вкладки</p>
-              </div>
 
-              <input type="radio" name="acor" id="acor3" />
-              <label for="acor3">Заголовок вкладки</label>
-              <div class="acor-body">
-                <p>Описание вкладки</p>
-              </div>
-            </div>
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+              <li class="author__item">
+                <a href="#" class="author__link">Зарницы памяти. Записки курсанта лётного училища.</a>
+              </li>
+
+
+            </ol>
           </div>
         </section>
 
