feat: add pop-up

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -42,15 +42,58 @@
 
     & > img {
       margin-bottom: 10px;
-      object-fit: contain!important;
+      object-fit: contain !important;
       width: 414px;
       max-height: 280px;
       min-height: 100%;
+      transition: all 0.4s ease;
+
+      &:hover {
+        cursor: pointer;
+        opacity: 0.8;
+        transform: scale(1.02);
+      }
     }
+  }
+
+  &__image-full {
+    margin: 0 auto;
   }
 
   &__text {
     padding: 10px;
     text-align: center;
   }
+}
+
+#modalWindow{
+  display:none;
+  color:white;
+  position:fixed;
+  flex-direction: column;
+  justify-content: center;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  background:rgba(0,0,0,.75);
+}
+#modalWindow #modalClose{
+  font-size: 40px;
+  line-height:36px;
+  width:40px;
+  height:40px;
+  border-radius:50%;
+  text-align:center;
+  background:black;
+  position: absolute;
+  top:20%;
+  right:16px;
+  cursor:pointer;
+}
+#modalPic{
+  max-width:100%;
+  margin-top: 10%;
+  padding:20px;
+  text-align: center;
 }
