--- a/src/templates/pages/gallery.html
+++ b/src/templates/pages/gallery.html
@@ -24,88 +24,151 @@
               <h2 class="title gallery__title">Наш выпуск</h2>
               <ul class="gallery__list">
                 <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
+                </li>
+                <li class="gallery__item">
+                  <img class="gallery__image" src="https://picsum.photos/1200/900?grayscale" alt="" />
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
-                </li>
-                <li class="gallery__item">
-                  <img src="https://picsum.photos/1200/900?grayscale" alt="" />
-                  <div class="gallery__text">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они щеке жаренные!</div>
+                  <div class="gallery__text">
+                    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Необходимыми, заголовок заглавных! Рукописи дороге которой текстами они
+                    щеке жаренные!
+                  </div>
                 </li>
                 <!-- <li class="gallery__item">
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
@@ -285,6 +348,11 @@
                   <img src="https://picsum.photos/1200/900?grayscale" alt="" />
                 </li> -->
               </ul>
+
+              <div id="modalWindow">
+                <div id="modalClose">&times;</div>
+                <div id="modalPic"></div>
+              </div>
             </div>
           </div>
         </section>
@@ -293,6 +361,6 @@
       </main>
       @@include('templates/components/_footer.html')
     </div>
-    <script src="js/product.min.js"></script>
+    <script src="js/main.min.js"></script>
   </body>
 </html>
