--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -133,57 +133,63 @@
             <div class="contaner">
               <h2 class="title">Наши выпускники</h2>
             </div>
+
 <div class="itcss">
+
+  <a class="itcss__control itcss__control_prev" href="#" role="button" data-slide="prev"></a>
+    <a class="itcss__control itcss__control_next" href="#" role="button" data-slide="next"></a>
+
               <div class="slider__container itcss__wrapper">
                 <ul data-simple-slider class="slider__list itcss__items">
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
-                  </li>
-
-
-                  <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
 
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
 
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
 
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
 
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
 
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
 
                   <li class="slider__item swiper-slide itcss__item">
-                    <a href="./product.html" target="_blank" class="slider__link">
-                      <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
-                    </a>
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
                   </li>
+
+                  <li class="slider__item swiper-slide itcss__item">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </li>
+
+                  <li class="slider__item swiper-slide itcss__item">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </li>
+
+                  <li class="slider__item swiper-slide itcss__item">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </li>
+
+                  <li class="slider__item swiper-slide itcss__item">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </li>
+
+                  <li class="slider__item swiper-slide itcss__item">
+                    <img src="https://picsum.photos/300/200?grayscale" alt="Фото" class="slider__img" />
+                  </li>
+
+
 
                 </ul>
               </div>
