--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,64 +1,59 @@
-/**
-  * SimpleAdaptiveSlider by Itchief v2.0.0 (https://github.com/itchief/ui-components/tree/master/simple-adaptive-slider)
-  * Copyright 2020 - 2021 Alexander Maltsev
-  * Licensed under MIT (https://github.com/itchief/ui-components/blob/master/LICENSE)
-  */
-
-/* стили для корневого элемента слайдера */
-.itcss {
-  position: relative;
-  overflow: hidden;
-  max-width: 100vw;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/* стили для wrapper */
-.itcss__wrapper {
-  position: relative;
-  overflow: hidden;
-  // background-color: #eee;
-}
-
-/* стили для элемента, в котором непосредственно расположены элементы (слайды) */
-.itcss__items {
-  display: flex;
-  transition: transform 0.5s ease;
-}
-
-/* класс для отключения transition */
-.transition-none {
-  transition: none;
-}
-
-/* стили для элементов */
-.itcss__item {
-  flex: 0 0 100%;
-  max-width: 25%;
-  max-height: 320px;
-  position: relative;
-    @include mq("768") {
-    max-width: 32%;
-  }
-  @include mq("480") {
-    max-width: 48%;
-  }
-
-  &:not(last-child) {
-    margin-right: 14px;
-
-    @include mq("480") {
-      margin-right: 4px;
-    }
-  }
-}
-
 .slider {
   margin-bottom: 40px;
 
   &__img {
     object-fit: cover;
     max-height: 320px;
+    min-height: 320px;
     cursor: move;
   }
+}
+
+.tns-controls {
+  position: absolute;
+  right: 0;
+  top: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @include mq("480") {
+    display: none;
+  }
+
+  button {
+    border: 1px solid #000;
+    border-radius: 10px;
+    width: 40px;
+    height: 30px;
+    margin-right: 10px;
+    background-color: #fff;
+    color: $accent;
+    cursor: pointer;
+    transition: transform 0.4s ease, background-color 0.4s ease;
+
+    &:hover {
+      transform: scale(1.1);
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+}
+
+.tns-nav {
+  position: absolute;
+  top: 68px;
+  left: 0;
+
+  button {
+    width: 10px;
+    height: 10px;
+    border: 1px solid #000;
+    border-radius: 50%;
+    background-color: #fff;
+    margin: 0 2px;
+  }
+}
+
+.tns-nav-active {
+  background-color: $accent !important;
 }
