fix: change slider

--- a/src/scss/pages/gallery.scss
+++ b/src/scss/pages/gallery.scss
@@ -58,6 +58,8 @@
 
   &__image-full {
     margin: 0 auto;
+    max-width: 90vw;
+    min-height: 80vh;
   }
 
   &__text {
@@ -76,6 +78,7 @@
   height:100%;
   top:0;
   left:0;
+  z-index: 3;
   background:rgba(0,0,0,.75);
 }
 #modalWindow #modalClose{
