--- a/src/scss/components/_bar.scss
+++ b/src/scss/components/_bar.scss
@@ -35,7 +35,13 @@
 }
 
 .search {
-  padding: 0 15px;
+  padding: 0;
+
+  &__title {
+    @include mq("768") {
+      font-size: 24px;
+    }
+  }
 
   &__form {
     display: flex;
