--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,59 +1,129 @@
 .slider {
   margin-bottom: 40px;
 
-  &__img {
-    object-fit: cover;
-    max-height: 320px;
-    min-height: 320px;
-    cursor: move;
-  }
-}
+  &__item {
+    position: relative;
+    max-height: 240px;
+    // flex: 0 0 15%;
 
-.tns-controls {
-  position: absolute;
-  right: 0;
-  top: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @include mq("480") {
-    display: none;
-  }
-
-  button {
-    border: 1px solid #000;
-    border-radius: 10px;
-    width: 40px;
-    height: 30px;
-    margin-right: 10px;
-    background-color: #fff;
-    color: $accent;
-    cursor: pointer;
-    transition: transform 0.4s ease, background-color 0.4s ease;
-
-    &:hover {
-      transform: scale(1.1);
-      background-color: $accent;
-      color: #fff;
+    &:not(last-child) {
+      margin-right: 14px;
     }
   }
-}
 
-.tns-nav {
-  position: absolute;
-  top: 68px;
-  left: 0;
-
-  button {
-    width: 10px;
-    height: 10px;
-    border: 1px solid #000;
-    border-radius: 50%;
-    background-color: #fff;
-    margin: 0 2px;
+  &__img {
+    // object-fit: cover;
+    // max-height: 320px;
+    // min-height: 320px;
+    // cursor: move;
   }
 }
 
-.tns-nav-active {
-  background-color: $accent !important;
+.embla {
+  position: relative;
+  // background-color: #f7f7f7;
+  padding: 20px;
+  // max-width: 670px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+
+.embla__viewport.is-draggable {
+  cursor: move;
+  cursor: grab;
+}
+
+.embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+
+.embla__container {
+  display: flex;
+  user-select: none;
+  margin-left: -100%;
+}
+
+.embla__slide {
+  position: relative;
+  padding-left: 10px;
+}
+
+.embla__slide__img {
+  object-fit: cover;
+  min-height: 240px;
+  max-height: 240px;
+  min-width: 320px;
+  max-width: 320px;
+  cursor: move;
+}
+
+.embla__button {
+  outline: 0;
+  cursor: pointer;
+  touch-action: manipulation;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 34px;
+  height: 34px;
+  justify-content: center;
+  align-items: center;
+  fill: $accent;
+  padding: 0;
+}
+
+.embla__button:disabled {
+  cursor: default;
+  opacity: 0.3;
+}
+
+.embla__button__svg {
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 6px;
+  background-color: rgba(255, 255, 255, 0.44);
+  width: 100%;
+  height: 100%;
+  transition: transform .4s ease, background-color .4s ease;
+
+  &:hover {
+    transform: scale(1.2);
+    background-color: #fff;
+  }
+}
+
+.embla__button--prev {
+  left: 27px;
+}
+
+.embla__button--next {
+  right: 27px;
+}
+
+.embla__progress {
+  position: relative;
+  background-color: #cdcdcd;
+  margin-top: 20px;
+  max-width: 270px;
+  width: calc(100% - 40px);
+  height: 4px;
+  overflow: hidden;
+  border-radius: 2px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.embla__progress__bar {
+  position: absolute;
+  background-color: $accent;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  left: -100%;
 }
