fix:change up button

--- a/src/templates/components/_up.html
+++ b/src/templates/components/_up.html
@@ -1,5 +1,5 @@
 <div class="up-wrapper">
-  <button class="up up--animated">
+  <button class="up">
     <span class="up__txt">Наверх</span>
     <svg class="up__icon">
       <use xlink:href="images/sprite.svg#up"></use>
