--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -25,7 +25,7 @@ body {
   flex-direction: column;
   overflow: hidden;
   min-height: 100vh;
-  background-image: url('../images/cloud1.png');
+  background-image: url("../images/cloud1.png");
   background-position: top;
   background-repeat: no-repeat;
   background-size: 200%;
@@ -161,12 +161,22 @@ span {
 }
 
 .up {
-  position: absolute;
+  // position: absolute;
+  // right: 40px;
+  // bottom: 40px;
+  // z-index: 9;
+  // width: 32px;
+  // height: 32px;
+  // cursor: pointer;
+  position: fixed;
+  bottom: 130px;
   right: 40px;
-  bottom: 40px;
   z-index: 9;
+  display: none;
   width: 32px;
   height: 32px;
+  text-align: center;
+  line-height: 32px;
   cursor: pointer;
 
   &__txt {
@@ -186,6 +196,7 @@ span {
   }
 
   &--animated {
+    display: block;
     animation-name: "up";
     animation-duration: 2s;
     animation-timing-function: ease;
