--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -62,6 +62,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @include mq('768'){
+      overflow: hidden;
+    }
   }
 
   &__title {
