feat: add theme switcher

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,8 @@
 @import "components/content";
 @import "components/slider";
 @import "components/news";
+@import "components/switcherTheme";
+@import "components/theme";
 @import "pages/product";
 @import "pages/author";
 @import "pages/gallery";
