fix: change themeSwitcher

--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
-  <body>
+  <body class="dark-mode">
     <div class="wrapper">
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
       <main class="main" data-aos="slide-up">
