--- a/src/scss/components/switcherTheme.scss
+++ b/src/scss/components/switcherTheme.scss
@@ -5,7 +5,7 @@ body {
 
     .wrapper {
       background-image: url(../images/stars.png);
-      background-size: 100% 600px;
+      background-size: 100%;
     }
 
     .header-top {
@@ -77,6 +77,10 @@ body {
     .menu {
       &__link {
         color: #cfd3ce;
+
+        & span {
+          color: #cfd3ce;
+        }
       }
 
       &__pic {
@@ -113,6 +117,10 @@ body {
         box-shadow: rgba(18, 93, 152, 0.9) 0 2px 4px, rgba(18, 93, 152, 0.9) 0 7px 13px -3px, rgba(18, 93, 152, 0.9) 0 -3px 0 inset;
       }
 
+      &__item--second {
+        box-shadow: rgba(18, 93, 152, 0.9) 0 2px 4px, rgba(18, 93, 152, 0.9) 0 7px 13px -3px, rgba(18, 93, 152, 0.9) 0 -3px 0 inset;
+      }
+
       &__element {
         background-image: $bg4-dark;
 
@@ -126,9 +134,60 @@ body {
         text-shadow: 1px 0 0 rgba(255, 255, 255, 0.25);
       }
 
+      &__title--second {
+        color: $accent;
+        text-shadow: 1px 0 0 rgba(255, 255, 255, 0.25);
+      }
+
       &__text {
         color: #cfd3ce;
       }
+    }
+
+    .product {
+      &__title {
+        color: $accent;
+      }
+
+      &__text {
+        background-color: #132238;
+
+        & p {
+          color: #fff;
+        }
+      }
+    }
+
+    .author {
+      &__name,
+      &__title {
+        color: $accent;
+      }
+
+      &__year,
+      &__block p,
+      &__social-link span,
+      &__link {
+        color: #cfd3ce;
+      }
+    }
+
+    .comments {
+      background-color: #132238;
+    }
+
+    #wpdcom .wpd-comment .wpd-comment-right {
+      border-radius: 8px;
+      padding: 10px;
+      background-color: #fff;
+    }
+
+    #wpdcom.wpd-layout-2 .wpd-comment.wpd-reply .wpd-comment-wrap.wpd-blog-post_author {
+      border-left: 6px solid #00b38f;
+      border-radius: 8px;
+      margin-top: 14px;
+      padding: 10px;
+      background-color: #fff;
     }
 
     .footer {
@@ -143,7 +202,6 @@ body {
     .product__content {
       // @extend %bg-dark;
       background-color: #132238;
-      // background-color: #222831;
     }
 
     .up {
