--- a/src/scss/components/switcherTheme.scss
+++ b/src/scss/components/switcherTheme.scss
@@ -170,7 +170,7 @@ body {
         box-shadow: rgba(18, 93, 152, 0.9) 0 2px 4px, rgba(18, 93, 152, 0.9) 0 7px 13px -3px, rgba(18, 93, 152, 0.9) 0 -3px 0 inset;
       }
 
-      &__item--second {
+      &__item-second {
         box-shadow: rgba(18, 93, 152, 0.9) 0 2px 4px, rgba(18, 93, 152, 0.9) 0 7px 13px -3px, rgba(18, 93, 152, 0.9) 0 -3px 0 inset;
       }
 
@@ -187,7 +187,7 @@ body {
         text-shadow: 1px 0 0 rgba(255, 255, 255, 0.25);
       }
 
-      &__title--second {
+      &__title-second {
         color: $accent;
         text-shadow: 1px 0 0 rgba(255, 255, 255, 0.25);
       }
@@ -211,6 +211,10 @@ body {
           & strong {
             color: #cfd3ce;
           }
+        }
+
+        & > blockquote p {
+          color: #000;
         }
       }
 
