--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "pages/product";
 @import "pages/author";
 @import "pages/gallery";
+@import "pages/albums";
 @import "components/comments";
 @import "components/modal";
 @import "components/footer";
